<resources>
    <string name="app_name">MoodTracker</string>

    <string name="navigation_home_label">Home</string>
    <string name="navigation_statistics_label">Statistics</string>
    <string name="navigation_settings_label">Settings</string>

    <string name="homeScreen_title">Mood Tracker</string>
    <string name="homeScreen_addMoodButton_label">Add mood</string>
    <string name="homeScreen_emptyState_title">No mood entries found</string>
    <string name="homeScreen_emptyState_label">No entries found for %1$s</string>
    <string name="homeScreenPreview_editMood_contentDescription">Edit mood</string>
    <string name="homeScreenPreview_deleteMood_contentDescription">Delete mood</string>
    <string name="homeScreenPreview_close_contentDescription">Close</string>

    <string name="editMoodScreen_addMood_label">Add Mood</string>
    <string name="editMoodScreen_editMood_label">Edit Mood</string>
    <string name="editMoodScreen_manageActions_label">Manage Actions</string>
    <string name="editMoodScreen_moodSection_label">How do you feel?</string>
    <string name="editMoodScreen_actionCategoriesSection_label">Did you do any activity?</string>
    <string name="editMoodScreen_noteSection_label">Add a note</string>
    <string name="editMoodScreen_photos_label">Photos (select up to 3 photos)</string>
    <string name="editMoodScreen_addPhoto_label">Add a photo</string>
    <string name="editMoodScreen_removePhoto_label">Remove photo</string>
    <string name="editMoodScreen_saving_label">Saving</string>
    <string name="editMoodScreen_saveButton_label">Save</string>

    <string name="statisticsScreen_title">Statistics</string>
    <string name="statisticsScreen_emptyState_title">No data for this month</string>
    <string name="statisticsScreen_emptyState_label">Switch to a different month or start tracking to see your patterns</string>
    <string name="statisticsScreen_averageDailyMoodSection_label">Average Daily Mood</string>
    <string name="statisticsScreen_actionImpactOverviewSection_label">Action Impact Overview</string>
    <string name="statisticsScreen_positiveImpactActionsSection_label">Positive Impact Actions</string>
    <string name="statisticsScreen_negativeImpactActionsSection_label">Negative Impact Actions</string>

    <string name="actionCategoriesScreen_title">Manage Actions</string>
    <string name="actionCategoriesScreen_addCategoryButton_label">Add Category</string>
    <string name="actionCategoriesScreen_emptyState_label">You haven\'t added any categories.</string>
    <string name="actionCategoriesScreen_editCategory_contentDescription">Edit</string>
    <string name="actionCategoriesScreen_deleteCategory_contentDescription">Delete</string>
    <string name="actionCategoriesScreen_deleteCategoryDialog_title">Delete Category</string>
    <string name="actionCategoriesScreen_deleteCategoryDialog_label">Are you sure you want to delete the \"%1$s\" category? This action cannot be undone.</string>
    <string name="actionCategoriesScreen_addCategoryDialog_title">Add Category</string>
    <string name="actionCategoriesScreen_addCategoryDialog_categoryName_label">Category name</string>
    <string name="actionCategoriesScreen_addCategoryDialog_selectColor_label">Select a color</string>
    <string name="actionCategoriesScreen_editCategoryDialog_title">Edit Category</string>
    <string name="actionCategoriesScreen_editCategoryDialog_categoryName_label">Category name</string>
    <string name="actionCategoriesScreen_editCategoryDialog_selectColor_label">Select a color</string>
    <string name="actionCategoriesScreen_placeholder_label">Select a category to view details</string>

    <string name="actionCategoryDetailsScreen_addActionButton_label">Add Action</string>
    <string name="actionCategoryDetailsScreen_emptyState_label">You haven’t added any activities.</string>
    <string name="actionCategoryDetailsScreen_editAction_contentDescription">Edit</string>
    <string name="actionCategoryDetailsScreen_deleteAction_contentDescription">Delete</string>
    <string name="actionCategoryDetailsScreen_editActionDialog_title">Edit Action</string>
    <string name="actionCategoryDetailsScreen_editActionDialog_actionName_label">Action name</string>
    <string name="actionCategoryDetailsScreen_addActionDialog_title">Add Action</string>
    <string name="actionCategoryDetailsScreen_addActionDialog_actionName_label">Action name</string>
    <string name="actionCategoryDetailsScreen_deleteActionDialog_title">Delete Action</string>
    <string name="actionCategoryDetailsScreen_deleteActionDialog_label">Are you sure you want to delete \"%1$s\"? This action cannot be undone.</string>

    <string name="settingsScreen_title">Settings</string>
    <string name="settingsScreen_generalSection_title">General</string>
    <string name="settingsScreen_dynamicColors_title">Dynamic colors</string>
    <string name="settingsScreen_dynamicColors_description">Use colors from your wallpaper when available</string>
    <string name="settingsScreen_iconShape_title">Icon shape</string>
    <string name="settingsScreen_iconShapeDialog_title">Select Icon Shape</string>
    <string name="settingsScreen_iconShapeDialog_description">Choose the style for mood icons</string>
    <string name="settingsScreen_iconShape_circle_label">Circle</string>
    <string name="settingsScreen_iconShape_roundedSquare_label">Rounded Square</string>
    <string name="settingsScreen_manageActions_title">Manage Actions</string>
    <string name="settingsScreen_aboutSection_title">About</string>
    <string name="settingsScreen_thirdPartyLicenses_title">Third Party Licenses</string>
    <string name="settingsScreen_version_title">Version</string>

    <string name="mood_angry">Angry</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_ok">OK</string>
    <string name="mood_good">Good</string>
    <string name="mood_happy">Happy</string>

    <string name="common_ok_label">OK</string>
    <string name="common_cancel_label">Cancel</string>
    <string name="common_delete_label">Delete</string>
    <string name="common_save_label">Save</string>
    <string name="common_date_label">Date</string>
    <string name="common_time_label">Time</string>
    <string name="common_emptyState_title">Nothing to show!</string>
    <string name="common_nextMonth_contentDescription">Next month</string>
    <string name="common_previousMonth_contentDescription">Previous month</string>
    <string name="common_deleteDialogTitle_label">Confirm Deletion</string>
    <string name="common_deleteDialogText_label">Once you confirm, it will be deleted and cannot be recovered</string>
    <string name="common_navigateUp_contentDescription">Back</string>

    <!-- Design System -->
    <string name="designSystem_dateRangeSelector_lastDays_label">Last %d Days</string>
    <string name="designSystem_dateRangeSelector_todayButton_label">Today</string>
    <string name="designSystem_dateRangeSelector_previousPeriod_contentDescription">Navigate to previous period</string>
    <string name="designSystem_dateRangeSelector_nextPeriodEnabled_contentDescription">Navigate to next period</string>
    <string name="designSystem_dateRangeSelector_nextPeriodDisabled_contentDescription">Next period not available</string>
    <string name="designSystem_dateRangeSelector_openDatePicker_contentDescription">Open date picker</string>
    <string name="designSystem_dateRangeSelector_selectedDate_contentDescription">Select date %1$s</string>
    <string name="designSystem_dateRangeSelector_futureDateNotSelectable_contentDescription">Future date %1$s, not selectable</string>
    
    <!-- Widget -->
    <string name="widget_description">Mood tracking widget</string>
</resources>